<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.ME1312.Galaxi</groupId>
    <artifactId>GalaxiRT</artifactId>
    <version>-PLACEHOLDER</version>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>org.fusesource.jansi</groupId>
            <artifactId>jansi</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>3.22.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.ME1312.Galaxi</groupId>
            <artifactId>GalaxiEngine</artifactId>
            <version>-PLACEHOLDER</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>me1312-repo</id>
            <url>https://dev.me1312.net/maven</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <directory>../out/compile/target/GalaxiRT</directory>
        <resources>
            <resource>
                <directory>Engine/src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>Engine/src</source>
                                <source>Logging/src</source>
                                <source>System/src</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <mkdir dir="${project.build.directory}/classes/net/ME1312/Galaxi/Engine/Runtime/Files" />
                                <copy file="${basedir}/../LICENSE" todir="${project.build.directory}/classes" />
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.htmlminifier</groupId>
                <artifactId>html-maven-plugin</artifactId>
                <version>0.0.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>html-minifier</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source-folder>${basedir}/Logging/src/net/ME1312/Galaxi/Engine/Runtime/Files</source-folder>
                    <target-folder>${project.build.directory}/classes/net/ME1312/Galaxi/Engine/Runtime/Files</target-folder>
                    <walk-recursively>false</walk-recursively>
                    <compression-enabled>true</compression-enabled>
                    <remove-http-protocol>false</remove-http-protocol>
                    <remove-https-protocol>false</remove-https-protocol>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <finalName>GalaxiRT</finalName>
                    <outputDirectory>../Artifacts/Maven</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>